--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -5,7 +5,9 @@
 # below each fixture, per the syntax in the comments below
 #
 
-# one:
+one:
+  title: MyString
+  description: MyDescription
 
-two: {}
-# column: value
+two:
+  title: MyString
