--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -11,5 +11,11 @@
 # column: value
 
 one:
-  title: 'My title'
-  description: 'My description'
+  title: My title
+  description: My description
+# one:
+#   id: 9a873342-295b-426c-b396-c816330ee72e
+#   title: Create First Task
+#   description: Create First Task for Sports
+#   deadline: Date.today
+#   category_id: 1ce72baa-2683-4549-a1a8-3eb13bd1b95c
