added users and edited the tests

--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -15,7 +15,7 @@ one:
   description: My description
   deadline: Date.today
   done: false
-  category_id: 600
+  category: category_table
 # one:
 #   id: 9a873342-295b-426c-b396-c816330ee72e
 #   title: Create First Task
