--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,11 +4,11 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
+# one: {}
+# column: value
+#
+# two: {}
+# column: value
 
-category_table:
-  title: MyString
-  description: MyDescription
-  user: eli
-# two:
-#   title: MyString
-#   description: MyDescription2
+eli:
+  email: eli@email.com
